--- a/public/html/index.html
+++ b/public/html/index.html
@@ -11,11 +11,12 @@
         <main>
         <div class="header-one">
             <div class="logo">
-                <img src="../image/logo.png">
+                <a href=""><img src="../image/logo.png"></a>
             </div>
             <div class="redes-sociais">
                 <ul>
                     <li><a href=""><img src="../image/logo-github.png"/></a></li>
+                    <li><a href=""><img src="../image/logo-facebook.png"/></a></li>
                     <li><a href=""><img src="../image/logo-instagram.png"/></a></li>
                     <li><a href=""><img src="../image/logo-linkedin.png"/></a></li>
                 </ul>
@@ -23,7 +24,22 @@
         </div>
     </main>
     </header>
-    <main>
+    <main class="coluna100porcento menu-urls">
+        <div class="header-two">
+            <div class="menu">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Service</a></li>
+                    <li><a href="">Pages</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Contact Us</a></li>
+                </ul>
+            </div>
+            <div class="busca">
+                <input placeholder="O que você procura?" type="text" />
+            </div>
+        </div>
         <script src="../javascript/index.js"></script>
     </main>
 </body>
