--- a/public/html/index.html
+++ b/public/html/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 </head>
 <body>
     <header class="menu-principal">
@@ -24,7 +25,7 @@
         </div>
     </main>
     </header>
-    <main class="coluna100porcento menu-urls">
+    <main class="coluna-100 menu-urls">
         <div class="header-two">
             <div class="menu">
                 <ul>
@@ -40,7 +41,17 @@
                 <input placeholder="O que você procura?" type="text" />
             </div>
         </div>
-        <script src="../javascript/index.js"></script>
     </main>
+    <div class="coluna-100-2">
+        <div class="slider-principal">
+            <img src="../image/vasco1.png" />
+            <img src="../image/vasco2.png" />
+            <img src="../image/vasco3.png" />
+        </div>
+    </div>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="../javascript/index.js"></script>
 </body>
 </html>
