--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="../css/style.css">
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
 </head>
+
 <body>
     <header class="menu-principal">
         <main>
-        <div class="header-one">
-            <div class="logo">
-                <a href=""><img src="../image/logo.png"></a>
+            <div class="header-one">
+                <div class="logo">
+                    <a href=""><img src="../image/logo.png"></a>
+                </div>
+                <div class="redes-sociais">
+                    <ul>
+                        <li><a href=""><img src="../image/logo-github.png" /></a></li>
+                        <li><a href=""><img src="../image/logo-facebook.png" /></a></li>
+                        <li><a href=""><img src="../image/logo-instagram.png" /></a></li>
+                        <li><a href=""><img src="../image/logo-linkedin.png" /></a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="redes-sociais">
-                <ul>
-                    <li><a href=""><img src="../image/logo-github.png"/></a></li>
-                    <li><a href=""><img src="../image/logo-facebook.png"/></a></li>
-                    <li><a href=""><img src="../image/logo-instagram.png"/></a></li>
-                    <li><a href=""><img src="../image/logo-linkedin.png"/></a></li>
-                </ul>
-            </div>
-        </div>
-    </main>
+        </main>
     </header>
     <main class="coluna-100 menu-urls">
         <div class="header-two">
@@ -42,11 +44,49 @@
             </div>
         </div>
     </main>
-    <div class="coluna-100-2">
+    <div class="coluna-100">
         <div class="slider-principal">
             <img src="../image/vasco1.png" />
             <img src="../image/vasco2.png" />
             <img src="../image/vasco3.png" />
+        </div>
+        <div class="texto edição-texto">
+            <h1><strong>Lorem ipsum dolor sit amet</strong></h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce fermentum dolor vel tellus tempus, eu
+                dapibus
+                nisi vehicula. Ut ac nunc id magna varius pretium. Vestibulum ante ipsum primis in faucibus orci luctus
+                et
+                ultrices posuere cubilia Curae; Curabitur eget purus id elit condimentum consequat. Pellentesque sit
+                amet
+                justo nisi. Phasellus ut semper quam, vitae efficitur arcu. Quisque sit amet ipsum quis sapien ultricies
+                venenatis. Cras vel posuere nisi. Maecenas sagittis nulla nec arcu fringilla, at fermentum eros
+                placerat.
+                Sed at aliquet ligula. Nullam a ligula sed urna vehicula mattis.
+                Suspendisse potenti. Nullam at felis eget tortor mattis vestibulum. Nam euismod laoreet libero, at
+                fringilla
+                metus vehicula a. Suspendisse potenti. In hac habitasse platea dictumst. Phasellus id semper eros, vel
+                rutrum augue. Fusce pretium dolor at risus vestibulum, at euismod lectus dignissim. Duis nec congue
+                velit.
+                Nullam feugiat vehicula orci, ut efficitur ex suscipit a. Phasellus at vestibulum elit. Sed nec lectus
+                vel
+                libero ultrices consectetur vel sit amet arcu. In hac habitasse platea dictumst. Vivamus vel semper
+                neque.
+                Integer auctor, mi quis tincidunt mollis, odio velit posuere ex, non commodo metus lorem eu justo.
+                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Mauris
+                vehicula, ipsum nec fringilla sagittis, enim justo aliquet turpis, sit amet pulvinar orci justo vitae
+                mauris. Nullam non ante sed lectus tempor fringilla. Sed lacinia ipsum eu risus suscipit, nec
+                ullamcorper
+                ipsum consectetur. Suspendisse euismod, odio eget rutrum vulputate, sapien nisl tempor justo, vel
+                bibendum
+                sapien nisl sit amet lacus. Maecenas auctor elit nec consequat tristique. Curabitur sed tempor ex. Sed
+                faucibus ultricies est, sit amet pulvinar dolor elementum nec. Curabitur ut aliquet tortor. Vivamus
+                vitae
+                odio sed erat mattis fermentum non sit amet nisi. Vivamus tempus justo eget felis euismod, nec faucibus
+                orci
+                convallis. Sed hendrerit semper purus, sit amet lobortis nulla lobortis nec. Nam pharetra velit eget
+                nulla
+                venenatis, ut scelerisque ipsum gravida. Sed tincidunt nec orci vel sagittis.
+            </p>
         </div>
     </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
@@ -54,4 +94,5 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="../javascript/index.js"></script>
 </body>
+
 </html>
