--- a/public/html/index.html
+++ b/public/html/index.html
@@ -45,10 +45,17 @@
         </div>
     </main>
     <div class="coluna-100">
-        <div class="slider-principal">
-            <img src="../image/vasco1.png" />
-            <img src="../image/vasco2.png" />
-            <img src="../image/vasco3.png" />
+        <div class="lista-assuntos">
+            <ul>
+                <li><a href="">Cinemática</a></li>
+                <li><a href="">Velocidade</a></li>
+                <li><a href="">Movimento Uniforme</a></li>
+                <li><a href="">Movimento Uniformemente Variado</a></li>
+                <li><a href="">Movimento Vertical</a></li>
+                <li><a href="">Vetores</a></li>
+                <li><a href="">Movimento Oblíquo</a></li>
+                <li><a href="">Movimento Circular</a></li>
+            </ul>
         </div>
         <div class="texto edição-texto">
             <h1><strong>Lorem ipsum dolor sit amet</strong></h1>
@@ -67,7 +74,9 @@
                 metus vehicula a. Suspendisse potenti. In hac habitasse platea dictumst. Phasellus id semper eros, vel
                 rutrum augue. Fusce pretium dolor at risus vestibulum, at euismod lectus dignissim. Duis nec congue
                 velit.
-                Nullam feugiat vehicula orci, ut efficitur ex suscipit a. Phasellus at vestibulum elit. Sed nec lectus
+            </p>
+            <img src="../image/exemplo-imagem.png">
+            <p>Nullam feugiat vehicula orci, ut efficitur ex suscipit a. Phasellus at vestibulum elit. Sed nec lectus
                 vel
                 libero ultrices consectetur vel sit amet arcu. In hac habitasse platea dictumst. Vivamus vel semper
                 neque.
@@ -76,7 +85,8 @@
                 vehicula, ipsum nec fringilla sagittis, enim justo aliquet turpis, sit amet pulvinar orci justo vitae
                 mauris. Nullam non ante sed lectus tempor fringilla. Sed lacinia ipsum eu risus suscipit, nec
                 ullamcorper
-                ipsum consectetur. Suspendisse euismod, odio eget rutrum vulputate, sapien nisl tempor justo, vel
+                ipsum consectetur.
+                Suspendisse euismod, odio eget rutrum vulputate, sapien nisl tempor justo, vel
                 bibendum
                 sapien nisl sit amet lacus. Maecenas auctor elit nec consequat tristique. Curabitur sed tempor ex. Sed
                 faucibus ultricies est, sit amet pulvinar dolor elementum nec. Curabitur ut aliquet tortor. Vivamus
@@ -87,6 +97,11 @@
                 nulla
                 venenatis, ut scelerisque ipsum gravida. Sed tincidunt nec orci vel sagittis.
             </p>
+        </div>
+        <div class="slider-principal">
+            <img src="../image/vasco1.png" />
+            <img src="../image/vasco2.png" />
+            <img src="../image/vasco3.png" />
         </div>
     </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
