--- a/public/html/index.html
+++ b/public/html/index.html
@@ -47,15 +47,21 @@
     <div class="coluna-100">
         <div class="lista-assuntos">
             <ul>
-                <li><a href="">Cinemática</a></li>
-                <li><a href="">Velocidade</a></li>
-                <li><a href="">Movimento Uniforme</a></li>
-                <li><a href="">Movimento Uniformemente Variado</a></li>
-                <li><a href="">Movimento Vertical</a></li>
-                <li><a href="">Vetores</a></li>
-                <li><a href="">Movimento Oblíquo</a></li>
-                <li><a href="">Movimento Circular</a></li>
+                <li><a class="assunto-geral" href="#">Cinemática</a> <button id="btnExpandir">+</button>
+                    <div id="abaExpandida" class="hidden">
+                        <ul>
+                            <li><a class="assunto-pontual" href="#">Velocidade</a></li>
+                            <li><a class="assunto-pontual" href="#">Movimento Uniforme</a></li>
+                            <li><a class="assunto-pontual" href="#">Movimento Uniformemente Variado</a></li>
+                            <li><a class="assunto-pontual" href="#">Movimento Vertical</a></li>
+                            <li><a class="assunto-pontual" href="#">Vetores</a></li>
+                            <li><a class="assunto-pontual" href="#">Movimento Oblíquo</a></li>
+                            <li><a class="assunto-pontual" href="#">Movimento Circular</a></li>
+                        </ul>
+                    </div>
+                </li>
             </ul>
+
         </div>
         <div class="texto edição-texto">
             <h1><strong>Lorem ipsum dolor sit amet</strong></h1>
