--- a/public/html/index.html
+++ b/public/html/index.html
@@ -44,7 +44,7 @@
             </div>
         </div>
     </main>
-    <div class="coluna-100">
+    <div class="coluna-100 page">
         <div class="lista-assuntos">
             <ul>
                 <li><a class="assunto-geral" href="#">Cinemática</a> <button id="btnExpandir">+</button>
