--- a/public/html/index.html
+++ b/public/html/index.html
@@ -68,7 +68,7 @@
             </div>
         </main>
     </header>
-    <div class="coluna-100 page">
+    <div class="coluna-100">
         <div class="pagePrincipal1">
             <div class="lista-assuntos">
                 <ul>
